<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/all_bg"
    android:orientation="vertical" >

    <!-- 头部导航 -->

    <include layout="@layout/merge_head_white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:scrollbars="none"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp" >

            <!-- 字體大小設置、資訊推送接收、切換語言（繁體、英文兩種語言）、清除緩存 -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/system"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fontSize"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/setting_item_selector"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/fontSize"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/setting_item_selector"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/messageHint"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/setting_item_selector"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/switchLanguage"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/setting_item_selector"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/cleanCache"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <!-- 版本號、免責聲明、雲端互動社區、意見反饋（發送郵件至已設定的郵箱）、評分與評論 -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="8dp"
                android:text="@string/about"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/setting_item_selector"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/versionNum"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/setting_item_selector"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/disclaimer"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/setting_item_selector"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/aboutCIC"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/setting_item_selector"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/feedback"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/setting_item_selector"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/gradeComment"
                android:textColor="@android:color/white"
                android:layout_marginBottom="8dp"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>